--- a/css/main_style.css
+++ b/css/main_style.css
@@ -22,23 +22,16 @@ p {
 .container-left {
   background: center/cover no-repeat url(../assets/background.jpg);
   position: static;
-  padding-top: 60px;
-  padding-left: 80px;
-  padding-right: 80px;
-  width: 100%;
   height: 360px;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .container-left {
     position: fixed;
     top: 0;
     left: 0;
-    width: 50%;
     height: 100vh;
-    padding-top: 12vh;
-    padding-bottom: 12vh;
-    padding-left: 5.5vw;
-    padding-right: unset;
+    width: 50%;
   }
 }
 @media (max-width: 576px) {
@@ -49,9 +42,28 @@ p {
     height: -webkit-max-content;
     height: -moz-max-content;
     height: max-content;
+    min-height: 360px;
+  }
+}
+.container-left .container-left-wrapper {
+  padding-top: 60px;
+  margin-left: 80px;
+  margin-right: 80px;
+  height: 100%;
+}
+@media (min-width: 768px) {
+  .container-left .container-left-wrapper {
+    padding-top: 12vh;
+    padding-bottom: 12vh;
+    margin-left: 5.5vw;
+    margin-right: unset;
+  }
+}
+@media (max-width: 576px) {
+  .container-left .container-left-wrapper {
     padding-top: 24px;
-    padding-right: unset;
-    padding-left: unset;
+    margin-right: unset;
+    margin-left: unset;
   }
 }
 
