--- a/css/main_style.scss
+++ b/css/main_style.scss
@@ -24,6 +24,7 @@ p{font-weight: 300;}
 
     width: 100%;
     height: 360px;
+    z-index: 2;
 
     //Desktop
     @media(min-width: 768px){
@@ -48,7 +49,8 @@ p{font-weight: 300;}
 
     //Mobile
     @media(max-width: 576px){
-        position: static;
+        position: sticky;
+        top: 0;
 
         width:100%; 
         max-width: 576px;
@@ -62,7 +64,7 @@ p{font-weight: 300;}
 
 .container-right{
     width: 100%;
-    margin-top: 80px;
+    padding-top: 80px;
     @media(max-width: 576px){
         padding-left: 30px;
         padding-right: 30px;
@@ -70,7 +72,9 @@ p{font-weight: 300;}
     //Desktop
     @media(min-width: 768px){
         width: 50%;
-        margin-top: 12vh;
+        padding-top: 12vh;
+        padding-bottom: 12vh;
+        height: 100vh;
     }
     //Extreme Desktop
     //  @media(min-width: 1400px){
@@ -93,6 +97,7 @@ p{font-weight: 300;}
 
 .hover-wrap{
     position: relative;
+    transition-duration: 500ms;
     .hover-textbox{
         display: none;
 
@@ -104,8 +109,8 @@ p{font-weight: 300;}
         h2{letter-spacing: 0.03em;}
     }
     &:hover{
-        .hover-textbox{display: block;transition: .5s ease;}
-        img{filter: brightness(0.3);transition: .5s ease;}
+        .hover-textbox{display: block;transition: .5s ;}
+        img{filter: brightness(0.3);transition-duration: 500ms;}
     }
 }
 
@@ -125,4 +130,13 @@ p{font-weight: 300;}
     }
 }
 
-
+//Global class
+i.rounded-circle{
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    border-radius: 50% !important;
+}
