[IMP] New unify class for primary bg theme

--- a/css/project_style.css
+++ b/css/project_style.css
@@ -6,6 +6,11 @@
   color: var(--primary-color);
 }
 
+.primary-bg-theme {
+  background-color: var(--primary-color);
+  color: black;
+}
+
 .container-left {
   background: var(--primary-color);
   min-height: 500px;
