--- a/css/project_style.scss
+++ b/css/project_style.scss
@@ -12,31 +12,37 @@
 
 //Main style overwrite
 .container-left{
-    background: var(--primary-color);
+    background: white;
     min-height: 500px;
     //Desktop
     @media(min-width: 768px){
         height: 100vh;
-        width:40%; 
+        width:50%; 
     }
     //Mobile
     @media(max-width: 576px){
         min-height: 300px;
     }
+
+
         
 }
-
+.container-right{
+    background: var(--primary-color);
+    max-width: unset;
+}
+.navbar-brand{font-family:'Abril Fatface', cursive ;}
 
 .img-project-hero{
     max-height: calc(500px - 60px - 64px);
     object-fit: cover;
-    object-position: top;
+    //object-position: top;
 
     //Desktop
     @media(min-width: 768px){
         min-height: 600px;
         max-height: calc(100% - 64px);
-        object-position: left;
+        //object-position: left;
     }
     //Mobile
     @media(max-width: 576px){
@@ -45,9 +51,8 @@
 }
 
 .product-CTA-next{
-   position: fixed;
-   bottom: 12vh;
-   right: 4vw;
+   position: absolute;
+   right: 25%;
    transition-duration: 500ms;
    &:hover{transform: scale(0.9);}
 }
