[REF] Side navbar in large bp

--- a/css/project_content_style.scss
+++ b/css/project_content_style.scss
@@ -13,16 +13,20 @@
 //Main style overwrite
 .container-left{
     background: var(--primary-color);
-    min-height: 500px;
+    height: unset;
+    min-height: 120px;
+    animation-duration: 500ms;
     //Desktop
     @media(min-width: 768px){
         height: 100vh;
-        width:320px; 
+        min-width:120px; 
+        width: fit-content;
     }
     //Mobile
     @media(max-width: 576px){
-        min-height: 300px;
+        min-height: 60px;
     }
+    
         
 }
 .container-right{
