--- a/css/project_content_style.css
+++ b/css/project_content_style.css
@@ -13,17 +13,23 @@
 
 .container-left {
   background: var(--primary-color);
-  min-height: 500px;
+  height: unset;
+  min-height: 120px;
+  -webkit-animation-duration: 500ms;
+          animation-duration: 500ms;
 }
 @media (min-width: 768px) {
   .container-left {
     height: 100vh;
-    width: 320px;
+    min-width: 120px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
   }
 }
 @media (max-width: 576px) {
   .container-left {
-    min-height: 300px;
+    min-height: 60px;
   }
 }
 
